force-app/main/default/objects/nFORCE__Step__c/nFORCE__Step__c.object-meta.xml
<CustomObject>
    <description>This object indicates the individual business process, called a step, that the system runs as part of a workflow.</description>
    <label>Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>