force-app/main/default/objects/nFORCE__Step__c/fields/nFORCE__Key__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Key__c</fullName>
    <description>The user manually populates this unique text field to provide an identifier for step identification purposes. By default, this field is blank.</description>
    <inlineHelpText>Enter a unique name in this field. Use this field to easily identify the step as you continue the workflow configuration process.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>