force-app/main/default/objects/nFORCE__Step__c/fields/nFORCE__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__lookupKey__c</fullName>
    <description>The system automatically populates this lookup field to indicate the External ID for the step object.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the step&apos;s External ID.</inlineHelpText>
    <label>Lookup Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>