force-app/main/default/objects/nFORCE__Step__c/fields/nFORCE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Type__c</fullName>
    <description>The user manually populates this picklist field to indicate how the system implements the step in the workflow. Some possible options include Apex and Flow.</description>
    <inlineHelpText>Select the desired type for your step.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>