force-app/main/default/objects/nFORCE__Step__c/listViews/nFORCE__All_Steps.listView-meta.xml
<ListView>
    <fullName>nFORCE__All_Steps</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Key__c</columns>
    <columns>nFORCE__Type__c</columns>
    <columns>nFORCE__Step_Definition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Steps</label>
</ListView>